# atlas-explorer

./: LICENSE  README.md  pyproject.toml  requirements.txt
atlas_explorer/: gui.py  launcher.py  qtutils.py  sliceview.ui  tree.py
src/: atlasview.py  launcher.py  treeview.ui
