[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas_explorer"
description = "Mouse Brain Regions Explorer"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Olivier Winter", email = "olivier.winter@internationalbrainlab.org"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "atlas_explorer.__version__"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["examples", "tests", "docs", "notebooks"]
